fix: Fixed CRUD schemas
